force-app/main/default/objects/Picklist_Line__c/Picklist_Line__c.object-meta.xml
<CustomObject>
    <description>Picklist Lines are Line Items within a Picklist and inherites Sales Order Line Items</description>
    <label>Picklist Line</label>
    <nameField>
        <displayFormat>PKLI-{0000000000}</displayFormat>
        <label>Picklist Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Picklist Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>