force-app/main/default/objects/Picklist_Line__c/fields/Actual_Qty_to_Pick__c.field-meta.xml
<CustomField>
    <fullName>Actual_Qty_to_Pick__c</fullName>
    <label>Actual Qty to Pick</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>