force-app/main/default/objects/Picklist_Line__c/fields/Available_to_Sell__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Sell__c</fullName>
    <formula>Product_Name__r.Available_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available to Sell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>