force-app/main/default/objects/Picklist_Line__c/fields/Bin_Location__c.field-meta.xml
<CustomField>
    <fullName>Bin_Location__c</fullName>
    <formula>Inventory_Position__r.Bin_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bin Location</label>
    <type>Text</type>
</CustomField>