force-app/main/default/objects/Picklist_Line__c/fields/Harvest_Batch_or_Lot_Code__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Batch_or_Lot_Code__c</fullName>
    <formula>Inventory_Position__r.Harvest_Batch_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch ID</label>
    <type>Text</type>
</CustomField>