force-app/main/default/objects/Picklist_Line__c/fields/Inventory_Position__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Position</label>
    <referenceTo>Inventory_Position__c</referenceTo>
    <relationshipLabel>Picklist Lines</relationshipLabel>
    <relationshipName>Picklist_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>