force-app/main/default/objects/Picklist_Line__c/fields/Is_Sample__c.field-meta.xml
<CustomField>
    <fullName>Is_Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sample</label>
    <type>Checkbox</type>
</CustomField>