force-app/main/default/objects/Picklist_Line__c/fields/Item_Picked__c.field-meta.xml
<CustomField>
    <fullName>Item_Picked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Barcode Scanner</description>
    <label>Item Picked</label>
    <type>Checkbox</type>
</CustomField>