force-app/main/default/objects/Picklist_Line__c/fields/Lab_Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Lab_Test_Status__c</fullName>
    <formula>TEXT(Inventory_Position__r.Lab_Test_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lab Test Status</label>
    <type>Text</type>
</CustomField>