force-app/main/default/objects/Picklist_Line__c/fields/Metrc_HttpResponse__c.field-meta.xml
<CustomField>
    <fullName>Metrc_HttpResponse__c</fullName>
    <label>Metrc_HttpResponse</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>