force-app/main/default/objects/Picklist_Line__c/fields/Metrc_PackageID__c.field-meta.xml
<CustomField>
    <fullName>Metrc_PackageID__c</fullName>
    <externalId>true</externalId>
    <label>Metrc_Package ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>