force-app/main/default/objects/Picklist_Line__c/fields/Order_Qty_Cases__c.field-meta.xml
<CustomField>
    <fullName>Order_Qty_Cases__c</fullName>
    <formula>Qty_to_Pick__c / Product_Name__r.MOQ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Qty (Cases)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>