force-app/main/default/objects/Picklist_Line__c/fields/Pack_out_UID__c.field-meta.xml
<CustomField>
    <fullName>Pack_out_UID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pack-out UID</label>
    <referenceTo>UID__c</referenceTo>
    <relationshipLabel>Picklist Lines</relationshipLabel>
    <relationshipName>Picklist_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>