force-app/main/default/objects/Picklist_Line__c/fields/Picklist__c.field-meta.xml
<CustomField>
    <fullName>Picklist__c</fullName>
    <label>Picklist</label>
    <referenceTo>Picklist__c</referenceTo>
    <relationshipLabel>Picklist Lines</relationshipLabel>
    <relationshipName>Picklist_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>