force-app/main/default/objects/Picklist_Line__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Picklist Lines</relationshipLabel>
    <relationshipName>Picklist_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>