force-app/main/default/objects/Picklist_Line__c/fields/QA_Status__c.field-meta.xml
<CustomField>
    <fullName>QA_Status__c</fullName>
    <label>QA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>