force-app/main/default/objects/Picklist_Line__c/fields/Qty_Picked__c.field-meta.xml
<CustomField>
    <fullName>Qty_Picked__c</fullName>
    <label>Qty Picked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>