force-app/main/default/objects/Picklist_Line__c/fields/Qty_to_Pick__c.field-meta.xml
<CustomField>
    <fullName>Qty_to_Pick__c</fullName>
    <description>Sales_Order_Line__r.Qty_Ordered__c</description>
    <formula>Inventory_Position__r.Qty_Allocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty to Pick</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>