force-app/main/default/objects/Picklist_Line__c/fields/Rack__c.field-meta.xml
<CustomField>
    <fullName>Rack__c</fullName>
    <formula>Inventory_Position__r.Rack__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rack</label>
    <type>Text</type>
</CustomField>