force-app/main/default/objects/Picklist_Line__c/fields/Rack_Level__c.field-meta.xml
<CustomField>
    <fullName>Rack_Level__c</fullName>
    <formula>Inventory_Position__r.Rack_Level__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rack Level</label>
    <type>Text</type>
</CustomField>