force-app/main/default/objects/Picklist_Line__c/fields/Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Line</label>
    <referenceTo>Sales_Order_Line__c</referenceTo>
    <relationshipLabel>Picklist Lines</relationshipLabel>
    <relationshipName>Picklist_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>