force-app/main/default/objects/Picklist_Line__c/fields/sorting__c.field-meta.xml
<CustomField>
    <fullName>sorting__c</fullName>
    <label>sorting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>