force-app/main/default/objects/Picklist_Line__c/fields/SRLB__c.field-meta.xml
<CustomField>
    <fullName>SRLB__c</fullName>
    <formula>Inventory_Location__c + &quot;-&quot; + Rack__c + &quot;-&quot; + Rack_Level__c + &quot;-&quot; +  Bin_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SRLB</label>
    <type>Text</type>
</CustomField>