force-app/main/default/objects/Picklist_Line__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF(Is_Sample__c = True, &quot;Sample&quot;,
IF( IsPromo__c = True, &quot;Promo&quot;,NULL))</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>