force-app/main/default/objects/Picklist_Line__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <formula>Inventory_Position__r.UID_New__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source UID</label>
    <type>Text</type>
</CustomField>